<resources>
    <string name="app_name">Тест-опросник Шмишека и Леонгарда</string>
    <string name="test_name">Тест-опросник Шмишека и Леонгарда</string>
    <string name="test_description">
        Предлагаем пройти тест на акцентуацию характера, или опросник Шмишека, и узнать, какие типы акцентуации выражены у вас наиболее ярко.
        Как и следует из названия теста, опросник был разработан Шмишеком на основе выделенных Леонгардом доминирующих черт характера при том или ином типе.
        Данный тест на акцентуацию состоит из 88 вопросов, касающихся 10 типов акцентуаций.
    </string>
    <string name="instruction">
        Вам будут предложены утверждения, касающиеся вашего характера.
        Отвечайте, долго не  раздумывая, вы можете выбрать один их двух ответов: «да» или «нет», других вариантов ответов  нет.
        Свой ответ нужно отметить в ответном бланке, поставив крестик в окошке «да» или «нет»  напротив цифры, соответствующей номеру вопроса.
    </string>
    <string name="noAccount">У Вас нет аккаунта?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="email">*Email:</string>
    <string name="password">*Пароль:</string>
    <string name="password_repeat">*Повторите пароль:</string>
    <string name="name">Фамилия и имя:</string>
    <string name="second_name">*Фамилия:</string>
    <string name="first_name">*Имя:</string>
    <string name="birtday">*Дата рождения:</string>
    <string name="gender">*Пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="email_v2">Email:</string>
    <string name="birtday_v2">Дата рождения:</string>
    <string name="gender_v2">Пол:</string>

    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="stat">Статистика</string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="registration">Регистрация</string>
    <string name="edit">Редактировать</string>
    <string name="go_test">Начать тест</string>
    <string name="personal">Личный кабинет</string>
    <string name="register">Зарегистрироваться</string>
</resources>