<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="100px"
        android:text="@string/test_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/testDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/test_description"
        android:textSize="50px"
        android:gravity="center"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_gravity="center"
        android:textColor="@color/mainGreen"/>

    <Button
        android:id="@+id/goPersonal"
        android:layout_width="300sp"
        android:textSize="70px"
        android:background="@color/mainGreen"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="40px"
        android:layout_marginTop="40px"
        android:layout_gravity="center"
        android:text="@string/personal" />
</LinearLayout>