<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <ImageView android:id="@+id/goBack"
        android:layout_width="70px"
        android:layout_height="70px"
        android:src="@drawable/arrow"
        android:layout_marginTop="30px"
        android:layout_marginLeft="40px"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="100px"
        android:layout_weight="1"
        android:text="@string/email_v2"
        android:layout_marginTop="20px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@color/selectedYelow"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:text="@string/name"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@color/selectedYelow"/>
    <TextView
        android:id="@+id/birtday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:text="@string/birtday_v2"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/userBirtday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@color/selectedYelow"/>
    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:text="@string/gender_v2"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/userGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="100px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@color/selectedYelow"/>

    <Button
        android:id="@+id/editUserData"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/selectedYelow"
        android:layout_height="200px"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/edit"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginBottom="50px"/>
    <Button
        android:id="@+id/getStat"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/selectedYelow"
        android:layout_height="200px"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/stat"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginBottom="50px"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/mainGreen"
        android:layout_height="200px"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/logout"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginBottom="50px"/>
</LinearLayout>