<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    <ImageView android:id="@+id/goBack"
        android:layout_width="70px"
        android:layout_height="70px"
        android:src="@drawable/arrow"
        android:layout_marginTop="30px"
        android:layout_marginLeft="40px"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="80px"
        android:layout_weight="1"
        android:text="@string/email"
        android:layout_marginTop="30px"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="80px"
    android:layout_weight="1"
    android:text="@string/first_name"
    android:layout_marginRight="80px"
    android:layout_marginLeft="80px"
    android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="80px"
        android:layout_weight="1"
        android:text="@string/second_name"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/surnameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="80px"
        android:text="@string/password"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/repeatPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="80px"
        android:text="@string/password_repeat"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/passwordRepeatInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/birtday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="80px"
        android:text="@string/birtday"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/birthdayInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:inputType="date"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:textSize="80px"
        android:text="@string/gender"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:textColor="@android:color/black"/>
    <RadioGroup
        android:id="@+id/genderSelect"
        android:checkedButton="@+id/MALE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80px"
        android:layout_marginLeft="80px"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/MALE"
            android:layout_width="500px"
            android:layout_height="match_parent"
            android:buttonTint="@color/mainGreen"
            android:text="@string/male"
            android:textSize="70px"
            android:textColor="@android:color/black"/>
        <RadioButton
            android:id="@+id/FEMALE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/mainGreen"
            android:text="@string/female"
            android:textSize="70px"
            android:textColor="@android:color/black"/>
    </RadioGroup>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:textSize="55px"
        android:background="@color/mainGreen"
        android:layout_height="100px"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/register"
        android:layout_marginRight="150px"
        android:layout_marginLeft="150px"
        android:layout_marginTop="50px"
        android:layout_marginBottom="50px"/>

</LinearLayout>